--- a/css/styles.css
+++ b/css/styles.css
@@ -472,9 +472,10 @@ address {
   display: flex;
   gap: 70px;
   align-items: baseline;
+  justify-content: space-between;
 }
 
-.soc-media-title {
+.footer-title {
   margin-bottom: 20px;
   color: var(--white-color);
   font-weight: 700;
@@ -564,6 +565,8 @@ address {
   fill: var(--black-color);
 }
 .modal {
+
+  padding: 40px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -572,7 +575,165 @@ address {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   width: 528px;
-  height: 580px;
+  
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition) var(--timing-function);
 }
+.modal-form{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.modal-title {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--black-color);
+  margin-bottom: 12px;
+}
+.input-section {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  gap: 10px;
+}
+
+.input-title {
+  
+  font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+color: var(--grey-color);
+
+margin-bottom: 4px;
+}
+
+.input-window{
+  width: 448px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  fill: var(--black-color);
+  padding: 12px 42px;
+  outline: transparent;
+  transition: border-color var(--transition) var(--timing-function);
+}
+ .input-window:hover, .input-window:focus {
+  border-color: var(--brand-color);
+}
+
+.input-window:hover + .input-icon, .input-window:focus + .input-icon {
+  fill: var(--brand-color);
+}
+
+.input-container {
+  position: relative;
+}
+.comment-window {
+  padding-left: 16px;
+  padding-right: 16px;
+  resize: none;
+}
+.check-box-container{
+  display: flex;
+  gap: 8px;
+  align-items: center;
+
+  margin-bottom: 30px;
+}
+
+.check-box-btn:checked + .icon-checkbox .icon-uncheck {
+opacity: 0;
+transition: opacity var(--transition) var(--timing-function);
+}
+
+.icon-check {
+  opacity: 0;
+  transition: opacity var(--transition) var(--timing-function);
+}
+.check-box-btn:checked + .icon-checkbox .icon-check{
+opacity: 1;
+}
+.check-box-title{
+  user-select: none;
+  text-underline-position: under;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.conditions-link {
+  color: var(--brand-color);
+}
+.footer-form-btn{
+  fill: var(--white-color);
+  gap: 10px;
+}
+.send-btn {
+  margin-left: auto;
+  margin-right: auto;
+}
+.form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+  height: 50px;
+  width: 200px;
+
+  font-size: 16px;
+  line-height: 1.87;
+
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  background-color: var(--brand-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+  outline: transparent;
+  transition: background-color var(--transition) var(--timing-function);
+}
+
+.form-btn:hover, .form-btn:focus{
+  background-color: #188CE8;
+}
+
+.input-icon{
+  width: 18px;
+  height: 18px;
+  fill: var(--black-color);
+  position: absolute;
+  left: 12px;
+  top:11px;
+  transition: fill var(--transition) var(--timing-function);
+}
+
+.footer-input {
+  padding: 15px 16px;
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  font-size: 16px;
+line-height: 1.25;
+color: rgba(255, 255, 255, 0.6);
+}
+form.footer-form {
+  display: flex;
+  gap: 12px;
+  align-items: baseline;
+}
+
